--- a/.github/workflows/dagger.yml
+++ b/.github/workflows/dagger.yml
@@ -13,6 +13,4 @@ jobs:
       # uses: docker/setup-docker-action@v4
       - uses: dagger/dagger-for-github@8.0.0
         with:
-          version: "latest"
-          args: functions
-          cloud-token: ${{ secrets.DAGGER_CLOUD_TOKEN }}
+          verb: functions
